--- a/allotment/static/allotment/base.css
+++ b/allotment/static/allotment/base.css
@@ -1,84 +1,81 @@
-body {
-  background: #fafafa;
-  color: #333333;
-  margin-top: 5rem;
+
+body { 
+	font: 75% georgia, sans-serif;
+	line-height: 3; 
+	margin: 0; 
+	padding: 0;
+	background-color: #F5F3EE;
+	text-align:center
 }
 
-h1, h2, h3, h4, h5, h6 {
-  color: #444444;
+a:link { 
+	font-weight: bold; 
+	text-decoration: none; 
+	color: #C1E1A6;
+}
+
+a:visited { 
+	font-weight: bold; 
+	text-decoration: none; 
+	color: #D4CDDC;
+}
+
+a:hover, a:focus, a:active { 
+	text-decoration: underline; 
+	color: #9685BA;
+}
+
+h1 { 
+	text-align: center;
+	display: block;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+h2 {  
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+input, textarea, select { 
+    padding: 10px; 
+    border: solid 1px #EEEEEE; 
+    outline: 0; 
+    font: normal 13px/100% Verdana, Tahoma, sans-serif; 
+    width: 200px; 
+    background: #FFFFFF; 
+    box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
+    -moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
+    -webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 8px; 
+    background: -webkit-gradient(linear, left top, left 25, from(#EEEEEE), color-stop(4%, #EEEEEE), to(#FFFFFF)); 
+    background: -moz-linear-gradient(top, #EEEEEE, #000000 1px, #EEEEEE 25px); 
+} 
+   
+textarea { 
+    width: 400px; 
+    max-width: 400px; 
+    height: 150px; 
+    line-height: 150%; 
+} 
+   
+input:hover, textarea:hover, select:hover,
+input:focus, textarea:focus, select:focus{ 
+    border-color: #000000; 
+} 
+
+a {
+    -webkit-transition: 300ms;
+    -moz-transition: 300ms;
+    -o-transition: 300ms;
+    transition: 300ms;
 }
 
 ul {
-  margin: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
-
-.bg-steel {
-  background-color: #5f788a;
-}
-
-.site-header .navbar-nav .nav-link {
-  color: #cbd5db;
-}
-
-.site-header .navbar-nav .nav-link:hover {
-  color: #ffffff;
-}
-
-.site-header .navbar-nav .nav-link.active {
-  font-weight: 500;
-}
-
-.content-section {
-  background: #ffffff;
-  padding: 10px 20px;
-  border: 1px solid #dddddd;
-  border-radius: 3px;
-  margin-bottom: 20px;
-}
-
-.article-title {
-  color: #444444;
-}
-
-a.article-title:hover {
-  color: #428bca;
-  text-decoration: none;
-}
-
-.article-content {
-  white-space: pre-line;
-}
-
-.article-img {
-  height: 65px;
-  width: 65px;
-  margin-right: 16px;
-}
-
-.article-metadata {
-  padding-bottom: 1px;
-  margin-bottom: 4px;
-  border-bottom: 1px solid #e3e3e3
-}
-
-.article-metadata a:hover {
-  color: #333;
-  text-decoration: none;
-}
-
-.article-svg {
-  width: 25px;
-  height: 25px;
-  vertical-align: middle;
-}
-
-.account-img {
-  height: 125px;
-  width: 125px;
-  margin-right: 20px;
-  margin-bottom: 16px;
-}
-
-.account-heading {
-  font-size: 2.5rem;
+ 
+li {
+    border-bottom: 1px solid #ccc;
 }
